<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="alarm_screen_main_label">Alarm</string>

    <string name="alarm_screen_stop_button">STOP</string>
    <string name="alarm_screen_snooze_button">SNOOZE</string>
    <string name="alarm_screen_continue_button">CONTINUE TO LISTEN</string>

    <string name="alarm_screen_stop_done_label">Alarm stopped</string>
    <string name="alarm_screen_snooze_done_label">%d minutes</string>
    <string name="alarm_screen_snooze_done_less_label">Less than one minute</string>
    <string name="alarm_screen_continue_done_label">Have a nice day</string>

    <string name="alarm_screen_error_toast">Oups an error has happened</string>

    <string name="alarm_notif_label_channel">Upcoming alarm</string>
    <string name="alarm_notif_soon_label">Upcoming alarm</string>
    <string name="alarm_notif_cancel_action">Dismiss</string>

    <string name="alarm_battery_optimization_direct_dialog_message">The \"Hibernation mode\" seems to be activated for the %1$s application. This mode can cause a delay in the launch of your clock. \nIn order to be sure that %1$s wakes you up on time, remember to disable this mode by accepting this change in the pop-up that will be displayed afterwards.</string>
    <string name="alarm_battery_optimization_direct_dialog_positive">OK</string>
    <string name="alarm_battery_optimization_direct_dialog_negative">Cancel</string>

    <string name="alarm_battery_optimization_list_dialog_message">The \"Hibernation mode\" seems to be activated for the %1$s application. This mode can cause a delay in the launch of your clock. \nIn order to be sure that %1$s wakes you up on time, remember to disable this mode by unchecking %1$s in the list that will be displayed afterwards.</string>
    <string name="alarm_battery_optimization_list_dialog_positive">Go to the list</string>
    <string name="alarm_battery_optimization_list_dialog_negative">Cancel</string>

    <string name="alarm_notif_date_format">EEE hh\':\'mm a</string>

</resources>