<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alarm_black"
    android:orientation="vertical"
    tools:context=".activity.AlarmLaunchActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/alarm_main_label_textview"
        style="@style/TextAlarmMainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="102dp"
        android:text="@string/alarm_screen_main_label"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/alarm_hour_label_textview"
        style="@style/TextAlarmHourLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_main_label_textview"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        tools:text="09:00"/>

    <FrameLayout
        android:id="@+id/alarm_continue_action_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="227dp"
        android:orientation="vertical"
        android:padding="12dp">

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextAlarmActionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_alarm_continue"
            android:padding="16dp"
            android:text="@string/alarm_screen_continue_button"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/alarm_snooze_action_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="68dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="12dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/background_alarm_action"
            android:scaleType="center"
            android:src="@drawable/ic_alarm_action_snooze_24dp"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextAlarmActionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/alarm_screen_snooze_button"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alarm_stop_action_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="12dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/background_alarm_action"
            android:scaleType="center"
            android:src="@drawable/ic_alarm_action_stop_24dp"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextAlarmActionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/alarm_screen_stop_button"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/alarm_action_done_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alarm_theme_color"
        android:visibility="invisible"
        tools:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/alarm_action_done_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/ic_alarm_action_stop_48dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/alarm_action_done_textview"
                style="@style/TextAlarmActionDoneLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                tools:text="@string/alarm_screen_stop_done_label"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/alarm_reveal_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alarm_theme_color"
        android:visibility="invisible"/>

</RelativeLayout>